--- a/leaderboard.html
+++ b/leaderboard.html
@@ -27,6 +27,9 @@
         <button class="inc point-button">Add 5 points</button>
         <button class="rmv point-button">Remove 5 points</button>
       </div>
+      <div class="buttons">
+        <button class="remove-player point-button">Remove Player</button>
+      </div>
     </div>
   {{else}}
     <div class="message">Click a player to select</div>
