--- a/leaderboard.html
+++ b/leaderboard.html
@@ -8,7 +8,7 @@
   <div class="outer">
     <div class="logo"></div>
     <h1 class="title">Leaderboard</h1>
-    <div class="subtitle">Select a scientist to give or remove points</div>
+    <div class="subtitle">Select a scientist to give/take points or remove them</div>
     {{> leaderboard}}
   </div>
 </body>
@@ -23,11 +23,11 @@
   {{#if selectedName}}
     <div class="details">
       <div class="name">{{selectedName}}</div>
-      <div class="buttons">
+      <div class="button-container">
         <button class="inc point-button">Add 5 points</button>
         <button class="rmv point-button">Remove 5 points</button>
       </div>
-      <div class="buttons">
+      <div class="button-container">
         <button class="remove-player point-button">Remove Player</button>
       </div>
     </div>
