--- a/leaderboard.html
+++ b/leaderboard.html
@@ -25,7 +25,7 @@
       <div class="name">{{selectedName}}</div>
       <div class="button-container">
         <button class="inc point-button">Add 5 points</button>
-        <button class="rmv point-button">Remove 5 points</button>
+        <button class="rmv point-button">Take 5 points</button>
       </div>
       <div class="button-container">
         <button class="remove-player point-button">Remove Player</button>
