--- a/leaderboard.html
+++ b/leaderboard.html
@@ -8,7 +8,7 @@
   <div class="outer">
     <div class="logo"></div>
     <h1 class="title">Leaderboard</h1>
-    <div class="subtitle">Select a scientist to give/take points or remove them</div>
+    <div class="subtitle">Select/Add/Remove a scientist to give/take points</div>
     {{> leaderboard}}
   </div>
 </body>
@@ -19,7 +19,9 @@
       {{> player}}
     {{/each}}
   </ol>
-
+   <div class="button-container">
+     <button class="add-scientist point-button">Add a scientist</button>
+   </div>
   {{#if selectedName}}
     <div class="details">
       <div class="name">{{selectedName}}</div>
@@ -28,11 +30,12 @@
         <button class="rmv point-button">Take 5 points</button>
       </div>
       <div class="button-container">
-        <button class="remove-player point-button">Remove Player</button>
+        <button class="remove-player point-button">Remove Scientist</button>
       </div>
     </div>
   {{else}}
     <div class="message">Click a player to select</div>
+
   {{/if}}
 </template>
 
